--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,9 @@ jobs:
       - name: Determine Version
         uses: gittools/actions/gitversion/execute@v3.0.3
         with:
-          useConfigFile: true
+          overrideConfig: |
+            update-build-number=false
+            next-version=0.114.0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
