--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,12 +9,14 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -28,12 +30,19 @@ jobs:
         with:
           versionSpec: '6.0.0'
 
+      - name: Get VERSION from File
+        id: version_file
+        run: |
+          version="$(cat ./verdaccio/VERSION)"
+          echo "version=$version" >> "$GITHUB_OUTPUT"
+
       - name: Determine Version
+        id: version_step
         uses: gittools/actions/gitversion/execute@v3.0.3
         with:
           overrideConfig: |
             update-build-number=false
-            next-version=0.114.0
+            next-version=${{ needs.version.outputs.version }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
