--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Get VERSION from File
         id: version_file
         run: |
-          version="$(cat ./verdaccio/VERSION)"
+          version="$(cat ./VERSION)"
           echo "version=$version" >> "$GITHUB_OUTPUT"
 
       - name: Determine Version
@@ -42,7 +42,7 @@ jobs:
         with:
           overrideConfig: |
             update-build-number=false
-            next-version=${{ needs.version.outputs.version }}
+            next-version=${{ needs.build.outputs.version }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
