--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,8 +33,8 @@ jobs:
       - name: Get VERSION from File
         id: version_file
         run: |
-          version="$(cat ./VERSION)"
-          echo "version=$version" >> "$GITHUB_OUTPUT"
+          VERSION="$(cat ./VERSION)"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Determine Version
         id: version_step
@@ -42,7 +42,7 @@ jobs:
         with:
           overrideConfig: |
             update-build-number=false
-            next-version=${{ needs.version.outputs.build }}
+            next-version=${{ env.VERSION }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
